apps/victor/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: victor
  labels:
    kubernetes.io/metadata.name: victor
    backstage.io/kubernetes-id: victor
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
