apps/victor/base/victor-deploy.yaml
---
# create deployment for victor
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: victor
  namespace: victor
  labels:
    app: victor
    version: 0.0.1
    backstage.io/kubernetes-id: victor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: victor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: victor
        version: 0.0.1
        backstage.io/kubernetes-id: victor
    spec:
      containers:
      - name: victor
        image: diegoluisi/victor:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
