apps/victor/base/victor-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victor-svc
  namespace: victor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: victor.diegoluisi.eti.br
  labels:
    app: victor
    version: 0.0.1
    backstage.io/kubernetes-id: victor
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: victor
