apps/victor/base/victor-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: victor-vs
  namespace: victor
  labels:
    app: victor
    version: 0.0.1
    backstage.io/kubernetes-id: victor
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - victor.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: victor-svc
      weight: 100
